--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,6 +74,10 @@ a {
 	background-color:#404040;
 }
 
+.selectRow:hover{
+	background-color:#f2f2f2;
+	color: black;
+}
  /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
   background-color: #eee;
