--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,10 @@ a {
 	border: 4px solid #ED1A23;
 }
 
-
+.dropdown-menu {
+	background-color:white;
+	z-index: 1070;
+}
 .form-control {
 	color: #f2f2f2;
 	background-color: #0d0d0d;
