Add Update Patient
Add Update Patient page and some functions

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,7 +69,8 @@ a {
 }
 
 #dispatchPanel, #demographicPanel, #problemPanel, #treatmentPanel,
- #dispositionPanel, #apcfpPanel, #narrativePanel, #authorizationPanel, #addDemo {
+#dispositionPanel, #apcfpPanel, #narrativePanel, #authorizationPanel,
+#addDemo, #patientUpdate {
 	background:#262626;
 }
 .btn-outline-secondary {
