--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,7 +67,9 @@ a {
 	color: #f2f2f2;
 	background-color: #0d0d0d;
 }
-
+.bg-gray {
+	background:#262626;
+}
 #dispatchPanel, #demographicPanel, #problemPanel, #treatmentPanel,
 #dispositionPanel, #apcfpPanel, #narrativePanel, #authorizationPanel,
 #addDemo, #patientUpdate {
